--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,9 @@ dependencies:
   yaml: ^3.1.3
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.4.0+1
+  path: ^1.9.1
   path_provider: ^2.1.5
+  get: ^4.7.3
 
 dev_dependencies:
   flutter_test:
